Merge to master (#24)
* 18/add lts 16 4 (#19)

* updated dependencies and README

* refactored subtask context

* formatted

* added plugins (#21)

* 18/add lts 16 4 (#22)

* updated dependencies and README

* refactored subtask context

* fixed bad env builld

* added unit tests and docs (#23)