@@ -3,9 +3,9 @@ import xerial.sbt.Sonatype._
 import scala.sys.process.Process
 import scala.util.{Failure, Try}
 
-val sparkVersion     = "3.5.4"
-val deltaLakeVersion = "3.2.1"
-val scala2Version    = "2.12.18"
+val sparkVersion     = "3.5.7"
+val deltaLakeVersion = "3.3.1"
+val scala2Version    = "2.13.16"
 val githubUser       = "fernanluyano"
 val projectName      = "db-zpark"
 val email            = "fernando.berlanga1@gmail.com"
@@ -43,6 +43,13 @@ ThisBuild / sonatypeCredentialHost := sonatypeCentralHost
 ThisBuild / sonatypeRepository     := sonatypeCentralHost
 ThisBuild / publishTo              := sonatypePublishToBundle.value
 
+addCompilerPlugin(scalafixSemanticdb)
+scalacOptions ++= Seq(
+  "-Yrangepos",
+  "-Ywarn-unused",
+  "-P:semanticdb:synthetics:on"
+)
+
 /**
  * Normally the dependencies included in the Databricks Runtime (latest LTS, not ML), or expected to be provided by
  * clients. See https://docs.databricks.com/aws/en/release-notes/
@@ -55,15 +62,15 @@ lazy val providedDependencies = Seq(
   "org.apache.kafka"  % "kafka-clients"   % "3.9.0"          % Provided
 )
 lazy val nonProvidedDependencies = Seq(
-  "dev.zio" %% "zio"         % "2.1.16",
-  "dev.zio" %% "zio-logging" % "2.5.0",
-  "dev.zio" %% "zio-json"    % "0.7.39"
+  "dev.zio" %% "zio"         % "2.1.21",
+  "dev.zio" %% "zio-logging" % "2.5.1",
+  "dev.zio" %% "zio-json"    % "0.7.44"
 )
 lazy val testDependencies = Seq(
   "org.scalatest"     %% "scalatest"    % "3.2.19"   % Test,
   "org.scalatestplus" %% "mockito-3-4"  % "3.2.10.0" % Test,
-  "dev.zio"           %% "zio-test"     % "2.1.16"   % Test,
-  "dev.zio"           %% "zio-test-sbt" % "2.1.16"   % Test
+  "dev.zio"           %% "zio-test"     % "2.1.21"   % Test,
+  "dev.zio"           %% "zio-test-sbt" % "2.1.21"   % Test
 )
 lazy val allDependencies = providedDependencies ++ nonProvidedDependencies ++ testDependencies
 
@@ -74,7 +81,23 @@ lazy val root = project
     idePackagePrefix      := Some("dev.fb.dbzpark"),
     Test / scalaSource    := baseDirectory.value / "src/test/scala",
     Compile / scalaSource := baseDirectory.value / "src/main/scala",
-    libraryDependencies ++= allDependencies
+    libraryDependencies ++= allDependencies,
+    Test / javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    ),
+    assemblyPackageScala / assembleArtifact := false,
+    assembly / mainClass                    := None,
+    assembly / assemblyJarName := {
+      val releaseVersion = version.value
+      s"$projectName-$releaseVersion.jar"
+    },
+    assembly / assemblyMergeStrategy := {
+      case PathList("META-INF", _) => MergeStrategy.discard
+      case _                       => MergeStrategy.first
+    }
   )
 
 lazy val getVersion = settingKey[String]("get current version")
